--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -3,19 +3,26 @@
     width: 100%;
     height: 90px;
     background-color: var(--colors-primary);
-    color: white;
+    color: var(--colors-background);
     justify-content: space-between;
     align-items: center;
 }
 
 .logo-name-wrapper {
+    width: 50%;
+    /* max-height: 90px; */
     display: flex;
+    
 }
 
 h2 {
     font-family: 'Courier New', Courier, monospace;
     font-weight: 300;
-    color: crimson;
+    color: var(--colors-background);
+}
+
+.dot {
+    color: var(--colors-accent);
 }
 
 .logo {
@@ -26,7 +33,7 @@ h2 {
 }
 
 .hamburger-icon {
-    color: white;
+    color: var(--colors-background);
     font-size: 3.2em;
     margin-right: 10px;
 }
