--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     --colors-primary: #151617;
     --colors-background: white;
     --colors-accent: rgb(220,20,60);
+    --colors-portfolio: #222324;
 }
 
 body {
