--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -9,7 +9,7 @@
     color: rgb(124, 123, 123);
     min-height: 100%;
     margin-bottom: 40px;
-    /* padding-top: 100px; */
+    padding-top: 100px;
 }
 
 
