--- a/src/pages/portfolioScreen/PortfolioScreen.module.css
+++ b/src/pages/portfolioScreen/PortfolioScreen.module.css
@@ -11,6 +11,9 @@
     margin-bottom: 160px;
     /* padding-top: 100px;   */
 }
+.port-container h1 {
+    font-size: 10rem;
+}
 
 .port-wrapper {
     display: flex;
@@ -31,7 +34,7 @@
     /* width: 30%; */
     list-style-type: none;
     text-align: center;
-    background-color: #222324;
+    background-color: var(--colors-portfolio);
     border-radius: 4px;
     padding: 30px 30px 0 30px;
     display: flex;
