--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,29 @@
     flex: 1;
     background-color: var(--colors-primary);
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     align-items: center;
+}
+
+@media only screen and (min-width: 576px) {
+    .app-container {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+
+}
+
+@media only screen and (min-width: 992px) {
+
+}
+
+@media only screen and (min-width: 1200px) {
+
+}
+
+@media only screen and (min-width: 1600px) {
+ 
 }
