--- a/src/index.css
+++ b/src/index.css
@@ -9,13 +9,43 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    background-color: var(--colors-primary);
 }
 
 h1{
-    font-size: 12rem;
+    font-size: 3.2rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 600;
     color: var(--colors-background);
-    margin-top: 40px;
 }
+
+
+@media only screen and (min-width: 576px) {
+    h1 {
+        font-size: 4rem;
+          }
+}
+
+@media only screen and (min-width: 768px) {
+    h1 {
+        font-size: 8rem;
+          }
+}
+
+@media only screen and (min-width: 992px) {
+    h1 {
+        font-size: 10rem;
+          }
+}
+
+@media only screen and (min-width: 1200px) {
+    h1 {
+        font-size: 12rem;
+          }
+}
+
+
 
