--- a/src/components/singlePortfolio/SinglePortfolio.module.css
+++ b/src/components/singlePortfolio/SinglePortfolio.module.css
@@ -4,8 +4,10 @@
     flex-direction: column; */
     color: var(--colors-background);
     max-width: 100%;
+    
     flex-grow: 1;
     height: auto;
+    padding: 0;
 }
 .singlePort-container h1 {
 font-size: 2rem;
@@ -26,6 +28,7 @@ height: 60px;
     background-color: var(--colors-primary);
     color: var(--colors-background);
     cursor: pointer;
+    margin: 0;
 }
 
 .arrow-button:hover {
@@ -45,7 +48,7 @@ height: 60px;
 .port {
     display: flex;
     flex-direction: row;
-    min-width: 80%;
+    min-width:90%;
     flex-wrap: wrap;
     background-color: var(--colors-portfolio);
     padding: 6px;
