--- a/src/components/singlePortfolio/SinglePortfolio.module.css
+++ b/src/components/singlePortfolio/SinglePortfolio.module.css
@@ -3,7 +3,7 @@
     /* display: flex;
     flex-direction: column; */
     color: var(--colors-background);
-    max-width: 100%;
+    width: 100%;
     
     flex-grow: 1;
     height: auto;
@@ -15,12 +15,23 @@ text-align: center;
 height: 60px;
 }
 
+.mobile-buttons {
+display: flex;
+justify-content: center;
+}
+
+.web-buttons {
+    display: none;
+}
+
 .singlePort-wrapper {
     display: flex;
     /* padding: 30px; */
     align-items: center;
     
 }
+
+
 
 .arrow-button {
     font-size: 2rem;
@@ -29,6 +40,7 @@ height: 60px;
     color: var(--colors-background);
     cursor: pointer;
     margin: 0;
+    /* width: 20px; */
 }
 
 .arrow-button:hover {
@@ -48,7 +60,7 @@ height: 60px;
 .port {
     display: flex;
     flex-direction: row;
-    min-width:90%;
+    /* min-width:90%; */
     flex-wrap: wrap;
     background-color: var(--colors-portfolio);
     padding: 6px;
@@ -76,7 +88,13 @@ height: 60px;
 }
 
 @media only screen and (min-width: 768px) {
-  
+  .mobile-buttons {
+      display: none;
+  }
+
+  .web-buttons {
+      display: flex;
+  }
 }
 
 @media only screen and (min-width: 992px) {
@@ -102,6 +120,14 @@ height: 60px;
         margin: 20px;
     }
 
+   
+}
+
+@media only screen and (min-width: 1200px) {
+ 
+}
+
+@media only screen and (min-width: 1600px) {
     .single-img{
         width: 66%;
         height: auto;
@@ -111,13 +137,5 @@ height: 60px;
         width: 30%;
         padding: 30px;
     }
-}
-
-@media only screen and (min-width: 1200px) {
- 
-}
-
-@media only screen and (min-width: 1600px) {
-  
 
 }
