--- a/src/components/singlePortfolio/SinglePortfolio.module.css
+++ b/src/components/singlePortfolio/SinglePortfolio.module.css
@@ -3,7 +3,7 @@
   /* display: flex;
     flex-direction: column; */
   color: var(--colors-background);
-  width: 100%;
+  width: 90%;
 
   flex-grow: 1;
   height: auto;
@@ -123,7 +123,7 @@
 
 @media only screen and (min-width: 992px) {
   .singlePort-container {
-    max-width: 90%;
+    /* max-width: 90%; */
     padding: 40px 0 180px 0;
   }
   .singlePort-container h1 {
