--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -1,11 +1,14 @@
 .navbar-container {
     display: flex;
+    position: fixed;
+    top: 0;
     width: 100%;
     height: 90px;
     background-color: var(--colors-primary);
     color: var(--colors-background);
     justify-content: space-between;
     align-items: center;
+    z-index: 1;
 }
 
 .logo-name-wrapper {
