--- a/src/index.css
+++ b/src/index.css
@@ -17,9 +17,8 @@ body {
 
 h1{
     font-size: 3.2rem;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: 500;
-
+    font-family: 'Noto Serif', serif;
+    font-weight: 700;
     color: var(--colors-background);
 }
 
@@ -33,7 +32,6 @@ h1{
 @media only screen and (min-width: 768px) {
     h1 {
         font-size: 8rem;
-        font-weight: 600;
           }
 }
 
