--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ h1{
     font-family: 'Noto Serif', serif;
     font-weight: 700;
     color: var(--colors-background);
+    padding-top: 100px;;
+
 }
 
 
