--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -7,7 +7,6 @@
     justify-content: center;
     flex-wrap: wrap;
     flex-grow: 1;
-    color: rgb(124, 123, 123);
     min-height: 100%;
     text-align: center;
     
@@ -21,8 +20,9 @@
 .main {
     /* border: 1px solid #000; */
     /* width: 60%; */
-    font-size: 2rem;
+    font-size: 1.4rem;
     font-weight: 300;
+    color: rgb(124, 123, 123);
     margin-bottom: 200px;
     width: 70%;
     height: auto;
@@ -42,7 +42,9 @@
 }
 
 @media only screen and (min-width: 576px) {
- 
+    .main {
+        font-size: 2rem;
+            }
   }
 
   @media only screen and (min-width: 768px) {
