--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
     --colors-background: white;
     --colors-accent: rgb(220,20,60);
     --colors-portfolio: #222324;
+    --colors-content: rgb(124, 123, 123);
 }
 
 body {
