--- a/src/components/navBar/NavBar.module.css
+++ b/src/components/navBar/NavBar.module.css
@@ -42,6 +42,22 @@ h2 {
     display: none;
 }
 
+.menuClass {
+    width: 150px;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    box-sizing: border-box;
+    display: block;
+    border-top: 2px solid #333;
+    background-color: white;
+}
+
+.menuClass:hover {
+    background: #ff0a54;
+    color: white;
+}
+
 @media only screen and (min-width: 768px) {
     .hamburger-icon {
         font-size: 3.2em;
