--- a/src/components/singlePortfolio/SinglePortfolio.module.css
+++ b/src/components/singlePortfolio/SinglePortfolio.module.css
@@ -15,14 +15,14 @@
 .mobile-buttons {
   display: flex;
   justify-content: center;
-  padding-bottom: 30px;;
+  padding-bottom: 10px;;
   /* margin-top: 80px; */
 }
 
 .title-mob {
   display: flex;
   justify-content: center;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .title-mob h1 {
@@ -89,7 +89,7 @@
 .right {
   flex-direction: column;
   width: 90%;
-  padding: 20px;
+  padding: 10px;
 }
 
 .right p {
@@ -100,7 +100,7 @@
 .list {
   margin-top: 20px;
   font-size: 1rem;
-  font-weight: 200;
+  font-weight: 400;
   list-style-type: none;
   color: var(--colors-content);
 }
@@ -155,6 +155,9 @@
   .port {
     padding: 30px;
     margin: 20px;
+  }
+  .right {
+    padding: 20px;
   }
 
   .list {
