--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -22,7 +22,7 @@
     /* width: 60%; */
     font-size: 1.4rem;
     font-weight: 300;
-    color: rgb(124, 123, 123);
+    color: var(--colors-content);
     margin-bottom: 200px;
     width: 70%;
     height: auto;
