--- a/src/pages/contact/Contact.module.css
+++ b/src/pages/contact/Contact.module.css
@@ -2,3 +2,38 @@
     margin-top: 100px;
     color: var(--colors-background);
 }
+.form {
+    margin-top: 130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.input {
+    margin-bottom: 6px;
+    width: 250px;
+    height: 26px;
+    padding: 4px;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Roboto' sans-serif;
+}
+
+.input-textarea {
+    padding: 4px;
+    width: 250px;
+    font-family: 'Roboto' sans-serif;
+}
+
+.submit-send {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    height: 40px;
+    background-color: var(--colors-accent);
+    /* width: 250px; */
+    color: var(--colors-background);
+    border: none;
+    font-weight: bold;
+    font-size: 18px;
+    border-radius: 8px;
+}
