--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
     --colors-accent: rgb(220,20,60);
     --colors-portfolio: #222324;
     --colors-content: rgb(124, 123, 123);
+    --colors-footer: #303031;
 }
 
 body {
