--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,10 +1,36 @@
 .footer-container {
     background-color: var(--colors-primary);
     width: 100%;
-    min-height: 80px;
+    height: 80px;
     position: fixed;
     bottom: 0;
     flex-shrink: 0;
     z-index: 20;
+
     /* border-top: 1px solid crimson; */
+}
+
+.info-container {
+    display: flex;
+    padding-top: 30px;
+    padding-right: 10px;
+    column-gap: 10px;
+    justify-content: flex-end;
+    align-items: center;
+    
+
+}
+.contact-text {
+    color: var(--colors-footer);
+    font-size: 0.8rem;
+    font-weight: 200;
+
+}
+.contact-icons a {
+    font-size: 1.2rem;
+    color: var(--colors-footer);
+}    
+
+.contact-icons a:hover {
+    color: var(--colors-background);
 }
