--- a/src/pages/contact/Contact.module.css
+++ b/src/pages/contact/Contact.module.css
@@ -3,10 +3,10 @@
     color: var(--colors-background);
 }
 .form {
-    margin-top: 130px;
+    /* margin-top: 130px; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .input {
@@ -30,10 +30,12 @@
     margin-bottom: 10px;
     height: 40px;
     background-color: var(--colors-accent);
-    /* width: 250px; */
+   
     color: var(--colors-background);
     border: none;
     font-weight: bold;
     font-size: 18px;
     border-radius: 8px;
 }
+
+
