--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,38 @@
 .app-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    flex: 1;
-    background-color: var(--colors-primary);
-    width: 100vw;
-    height: 100vh;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* flex: 1; */
+  background-color: var(--colors-primary);
+  width: 100vw;
+  height: 100%;
+  align-items: center;
+}
+
+.footer {
+  display: none;
 }
 
 @media only screen and (min-width: 576px) {
-    .app-container {
-        width: 100%;
-        height: 100%;
-    }
+  .app-container {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @media only screen and (min-width: 768px) {
-
+    .footer {
+        width: 100%;
+      display: flex;
+    }
 }
 
 @media only screen and (min-width: 992px) {
-
+ 
 }
 
 @media only screen and (min-width: 1200px) {
-
 }
 
 @media only screen and (min-width: 1600px) {
- 
 }
