--- a/src/pages/contact/Contact.module.css
+++ b/src/pages/contact/Contact.module.css
@@ -44,12 +44,13 @@
     height: 40px;
     width: 100%;
     background-color: var(--colors-accent);
-   
+    background: var(--colors-accent);
     color: var(--colors-background);
     border: none;
     font-weight: bold;
     font-size: 18px;
     border-radius: 8px;
+    border: none;
 }
 
 
@@ -57,7 +58,7 @@
     display: flex;
     column-gap: 10px;
     justify-content: center;
-    align-items: flex-end;
+    
     
 
 }
