--- a/src/pages/contact/Contact.module.css
+++ b/src/pages/contact/Contact.module.css
@@ -43,7 +43,7 @@
     margin-bottom: 10px;
     height: 40px;
     width: 100%;
-    background-color: var(--colors-accent);
+    /* background-color: var(--colors-accent); */
     background: var(--colors-accent);
     color: var(--colors-background);
     border: none;
@@ -58,9 +58,6 @@
     display: flex;
     column-gap: 10px;
     justify-content: center;
-    
-    
-
 }
 
 
