--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
+.App {
+  background-color: var(--colors-primary);
+}
+
 .app-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   /* flex: 1; */
-  background-color: var(--colors-primary);
+  
   width: 100vw;
   height: 100%;
   align-items: center;
