--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,13 +1,19 @@
 .footer-container {
     background-color: var(--colors-primary);
     width: 100%;
-    height: 80px;
+    height: 60px;
     position: fixed;
     bottom: 0;
     flex-shrink: 0;
+    display: flex;
     z-index: 20;
-
+    justify-content: space-between;
+    align-items: flex-end;
     /* border-top: 1px solid crimson; */
+}
+
+.buttonContainer {
+    margin: 0;
 }
 
 .info-container {
@@ -17,15 +23,15 @@
     column-gap: 10px;
     justify-content: flex-end;
     align-items: center;
-    
-
 }
+
 .contact-text {
     color: var(--colors-footer);
     font-size: 0.8rem;
     font-weight: 200;
-
 }
+
+
 .contact-icons a {
     font-size: 1.2rem;
     color: var(--colors-footer);
@@ -34,3 +40,4 @@
 .contact-icons a:hover {
     color: var(--colors-background);
 }
+
