--- a/src/theme.css
+++ b/src/theme.css
@@ -12,6 +12,6 @@
     --colors-background: #151617;
     --colors-accent: rgb(220,20,60);
     --colors-portfolio: rgb(124, 123, 123);
-    --colors-content: #222324;
+    --colors-content: rgb(124, 123, 123);
     --colors-footer: #303031;
 }
