--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -1,7 +1,7 @@
 .footer-container {
     background-color: var(--colors-primary);
     width: 100%;
-    height: 60px;
+    /* height: 60px; */
     position: fixed;
     bottom: 0;
     flex-shrink: 0;
@@ -18,7 +18,7 @@
 
 .info-container {
     display: flex;
-    padding-top: 30px;
+    /* padding-top: 30px; */
     padding-right: 10px;
     column-gap: 10px;
     justify-content: flex-end;
