--- a/src/components/singlePortfolio/SinglePortfolio.module.css
+++ b/src/components/singlePortfolio/SinglePortfolio.module.css
@@ -5,6 +5,9 @@
   flex-grow: 1;
   height: auto;
   padding: 0;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
 }
 .singlePort-container h1 {
   font-size: 2rem;
@@ -15,7 +18,12 @@
 .mobile-buttons {
   display: flex;
   justify-content: center;
-  padding-bottom: 10px;;
+  padding-bottom: 10px;
+  position: fixed;
+  top: 90px;
+  left: 0;
+  min-width: 100%;
+  margin-bottom: 30px;
   /* margin-top: 80px; */
 }
 
@@ -83,7 +91,7 @@
 .single-img {
   width: 90%;
   height: 90%;
-  margin: 5px auto;
+  margin: 40px auto 5px auto;
 }
 
 .right {
@@ -124,6 +132,10 @@
 
   .web-buttons {
     display: flex;
+  }
+
+  .single-img {
+    margin: 5px auto;
   }
 }
 
