--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -1,11 +1,50 @@
+
+
 .about-container {
-    margin-top: 100px;
-    width: 90%;
-    color: var(--colors-background);
+  margin-top: 100px;
+  padding-bottom: 100px;
+  width: 90%;
+  color: var(--colors-background);
+  margin: 0 auto;
+  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.about-container h1 {
+  font-size: 2rem;
+  text-align: center;
 }
 
 .about-container p {
-    font-size: 2rem;
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: var(--colors-content);
+}
+
+@media only screen and (min-width: 768px) {
+  /* .about-container {
     font-weight: 300;
-    color: var(--colors-content);
+  } */
+
+  .about-container h1 {
+    font-size: 3rem;
+  }
+
+  .about-container p {
+      font-size: 2rem;
+      font-weight: 300;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+    .about-container h1 {
+        font-size: 4rem;
+      }
+    
+      .about-container p {
+          font-size: 2.2rem;
+          font-weight: 300;
+      }
 }
