--- a/src/pages/portfolioScreen/PortfolioScreen.module.css
+++ b/src/pages/portfolioScreen/PortfolioScreen.module.css
@@ -1,15 +1,12 @@
 .port-container {
     width: 80%;
     height: 100%;
-    /* background-color: var(--colors-primary); */
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
     margin-top: 0;
     margin-bottom: 160px;
-    /* padding-top: 100px;   */
 }
 
 
@@ -22,13 +19,11 @@
     font-weight: 200;
     flex-wrap: wrap;
     gap: 20px;
-    /* font-family: 'Roboto', sans-serif; */
 }
 
 
 
 .port-comp {
-    /* width: 30%; */
     list-style-type: none;
     text-align: center;
     background-color: var(--colors-portfolio);
@@ -58,6 +53,7 @@
     display: flex;
     column-gap: 20px;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .cat-button {
