--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -6,7 +6,7 @@
   width: 90%;
   color: var(--colors-background);
   margin: 0 auto;
-  /* height: 100%; */
+  height: 100%;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -24,9 +24,9 @@
 }
 
 @media only screen and (min-width: 768px) {
-  /* .about-container {
-    font-weight: 300;
-  } */
+  .about-container {
+    min-height: 100%;
+  }
 
   .about-container h1 {
     font-size: 3rem;
@@ -39,7 +39,11 @@
 }
 
 @media only screen and (min-width: 992px) {
-    .about-container h1 {
+  .about-container {
+    width: 80%;
+  }  
+  
+  .about-container h1 {
         font-size: 4rem;
       }
     
