--- a/src/pages/portfolioScreen/PortfolioScreen.module.css
+++ b/src/pages/portfolioScreen/PortfolioScreen.module.css
@@ -1,6 +1,6 @@
 .port-container {
     width: 80%;
-    height: 100%;
+    /* height: 100%; */
     flex-grow: 1;
     display: flex;
     flex-direction: column;
