--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
     padding: 0;
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
+    font-size: 1.6rem;
     width: 100%;
   }
 
@@ -28,6 +29,7 @@ h1{
     h1 {
         font-size: 4rem;
           }
+
 }
 
 @media only screen and (min-width: 768px) {
