--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -22,7 +22,7 @@
 
 @media only screen and (min-width: 768px) {
   .about-container h1 {
-    font-size: 3rem;
+    font-size: 4rem;
   }
 
   .about-container p {
@@ -37,11 +37,25 @@
   }
 
   .about-container h1 {
-    font-size: 4rem;
+    font-size: 5rem;
   }
 
   .about-container p {
     font-size: 2.2rem;
     font-weight: 300;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .about-container p {
+    font-size: 3rem;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .about-container h1 {
+    font-size: 6rem;
+  }
+  .about-container p {
+    font-size: 3.6rem;
   }
 }
