--- a/src/pages/contact/Contact.module.css
+++ b/src/pages/contact/Contact.module.css
@@ -5,6 +5,9 @@
   justify-content: flex-start;
   align-items: center;
 }
+.contact-container h1 {
+    font-size: 2rem;
+}
 
 .form {
   display: flex;
