--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -19,6 +19,19 @@
   font-weight: 400;
   color: var(--colors-content);
 }
+h3 {
+  font-size: 1.8rem;
+  font-family: "Noto Serif", serif;
+  margin-bottom: 0;
+}
+.red {
+  color: var(--colors-accent);
+}
+.accent {
+  color: var(--colors-background);
+  /* font-weight: 400; */
+  text-decoration: none;
+}
 
 @media only screen and (min-width: 768px) {
   .about-container h1 {
@@ -39,6 +52,7 @@
   .about-container h1 {
     font-size: 5rem;
   }
+ 
 
   .about-container p {
     font-size: 2.2rem;
