--- a/src/pages/singlePortfolio/SinglePortfolio.module.css
+++ b/src/pages/singlePortfolio/SinglePortfolio.module.css
@@ -30,11 +30,13 @@
   display: flex;
   justify-content: center;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .title-mob h1 {
   font-size: 1.2rem;
   margin-bottom: 0;
+  
 }
 
 .title-web {
@@ -100,8 +102,10 @@
 
 .right {
   flex-direction: column;
+  align-items: center;
   width: 90%;
   padding: 10px;
+  margin: 0 auto;
 }
 
 .right p {
@@ -135,6 +139,7 @@
   }
 
   .title-web {
+    margin-top: 100px;
     display: block;
   }
 
@@ -163,6 +168,7 @@
 
   .singlePort-container h1 {
     font-size: 4rem;
+    margin-top: -20px;
   }
 
 
@@ -196,7 +202,7 @@
 @media only screen and (min-width: 1600px) {
   .single-img {
     width: 66%;
-    height: auto;
+    height: 66%;
   }
 
   .right {
