--- a/src/pages/about/About.module.css
+++ b/src/pages/about/About.module.css
@@ -53,7 +53,9 @@ h3 {
     font-size: 5rem;
   }
  
-
+h3 {
+  font-size: 3rem;
+}
   .about-container p {
     font-size: 2.2rem;
     font-weight: 300;
