--- a/src/pages/contact/Contact.module.css
+++ b/src/pages/contact/Contact.module.css
@@ -5,8 +5,9 @@
   justify-content: flex-start;
   align-items: center;
 }
+
 .contact-container h1 {
-    font-size: 2rem;
+  font-size: 2rem;
 }
 
 .form {
@@ -54,7 +55,6 @@
 .contact-icons {
   padding-bottom: 0;
   margin-bottom: 0;
-  /* height: 40px; */
   margin-block-start: 0;
   margin-block-end: 0;
 }
@@ -65,6 +65,11 @@
 
 .contact-icons a:hover {
   color: var(--colors-accent);
+}
+
+.mail {
+  font-size: 1.76rem;
+  margin-top: -1px;
 }
 
 @media only screen and (min-width: 768px) {
