--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -53,7 +53,9 @@
 }
 
 @media only screen and (min-width: 992px) {
-
+  .aboutWrapper {
+    width: 70%;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
