--- a/src/components/landingButton/LandingButton.module.css
+++ b/src/components/landingButton/LandingButton.module.css
@@ -123,9 +123,10 @@
 
 .text {
   font-size: 4rem;
-  margin-top: 0rem;
+  margin-top: -0.5rem;
   font-family: "Courier New", Courier, monospace;
   font-weight: 500;
+  transform: scale(1.2);
 }
 a {
   text-decoration: none;
